log
Fri Apr 17 07:01:43 PM UTC 2026: 
 hashmap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  1|7
total_score: 0/60
0bf2c83
Fri Apr 17 07:03:50 PM UTC 2026: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|7
total_score: 0/60
519f57d
Fri Apr 17 07:04:39 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/60
2a6ff14
Fri Apr 17 07:06:24 PM UTC 2026: 
 hashmap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:80:10: error: unused variable ‘i’ [-Werror=unused-variable]
   80 |     long i = 1; // Empieza una posicion a la derecha
      |          ^
cc1: all warnings being treated as errors
0ec2e13
Fri Apr 17 07:06:53 PM UTC 2026: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|6
total_score: 10/60
00d551b
Fri Apr 17 07:08:13 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9c2c306
Fri Apr 17 07:08:32 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/60
cdc2d1f
Fri Apr 17 07:09:31 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:75:24: error: comparison between pointer and integer [-Werror]
   75 |     if ((map->capacity == NULL) || (map->capacity == 0)) return NULL;
      |                        ^~
cc1: all warnings being treated as errors
4e000ca
Fri Apr 17 07:09:53 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/60
6525371
Fri Apr 17 07:11:08 PM UTC 2026: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  3|6
total_score: 10/60
918e007
Fri Apr 17 07:15:01 PM UTC 2026: 
 hashmap.c | 18 ++++++++++--------
 1 file changed, 10 insertions(+), 8 deletions(-)
 tests:  3|6
total_score: 10/60
e32224c
Fri Apr 17 07:21:31 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|6
total_score: 10/60
e4a057d
Sat Apr 18 10:02:24 PM UTC 2026: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:5: error: ‘new_map’ undeclared (first use in this function)
   49 |     new_map->buckets = (Pair**)calloc(capacity,sizeof(Pair))
      |     ^~~~~~~
hashmap.c:49:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:49:61: error: expected ‘;’ before ‘map’
   49 |     new_map->buckets = (Pair**)calloc(capacity,sizeof(Pair))
      |                                                             ^
      |                                                             ;
   50 |     map->capacity = capacity;
      |     ~~~                                                      
a15fdb0
Sat Apr 18 10:02:35 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:5: error: ‘new_map’ undeclared (first use in this function)
   49 |     new_map->buckets = (Pair**)calloc(capacity,sizeof(Pair));
      |     ^~~~~~~
hashmap.c:49:5: note: each undeclared identifier is reported only once for each function it appears in
9eb17d2
Sat Apr 18 10:03:10 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:50:5: error: ‘map’ undeclared (first use in this function)
   50 |     map->capacity = capacity;
      |     ^~~
hashmap.c:50:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:53:1: error: control reaches end of non-void function [-Werror=return-type]
   53 | }
      | ^
cc1: all warnings being treated as errors
98ece04
Sat Apr 18 10:03:41 PM UTC 2026: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  4|5
total_score: 15/60
e0a7998
Sun Apr 19 06:04:42 PM UTC 2026: 
 hashmap.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:70:63: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   70 |     if ((map == NULL) || (key==NULL) || (value==NULL)) return NULL; //
      |                                                               ^~~~
hashmap.c:68:6: note: declared here
   68 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
hashmap.c:71:36: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   71 |     if (map->capacity == 0) return NULL; // "Mapa" no tiene capacidad.
      |                                    ^~~~
hashmap.c:68:6: note: declared here
   68 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
hashmap.c:76:9: error: too few arguments to function ‘strcmp’
   76 |     if (strcmp(map->buckets[pos]->key) == NULL) { // Espacio vacio
      |         ^~~~~~
In file included from test.c:3:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/string.h:156:12: note: declared here
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |            ^~~~~~
287571f
Sun Apr 19 06:09:46 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:76:9: error: too few arguments to function ‘strcmp’
   76 |     if (strcmp(map->buckets[pos]->key) == NULL) { // Espacio vacio
      |         ^~~~~~
In file included from test.c:3:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/string.h:156:12: note: declared here
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |            ^~~~~~
5a69769
Sun Apr 19 06:10:02 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e4bab05
Sun Apr 19 06:11:14 PM UTC 2026: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
102b35d
Sun Apr 19 06:12:10 PM UTC 2026: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
8ef665a
Sun Apr 19 06:16:47 PM UTC 2026: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  4|5
total_score: 15/60
17aa088
Sun Apr 19 06:20:11 PM UTC 2026: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 20/60
096c9c0
Sun Apr 19 06:31:01 PM UTC 2026: 
 hashmap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:82:9: error: ‘first_collision_pos’ undeclared (first use in this function)
   82 |         first_collision_pos = pos;
      |         ^~~~~~~~~~~~~~~~~~~
hashmap.c:82:9: note: each undeclared identifier is reported only once for each function it appears in
7063dab
Sun Apr 19 06:31:13 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
ba62443
Sun Apr 19 06:31:39 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 15/60
bcc31cc
Sun Apr 19 06:32:03 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:75:44: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   75 |     if ((map->buckets[pos] == NULL) && (map->key==NULL)) { // Espacio vacio
      |                                            ^~
hashmap.c:88:48: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘key’
   88 |         if ((map->buckets[pos] == NULL) && (map->key==NULL)) {
      |                                                ^~
60ff76e
Sun Apr 19 06:32:30 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
3ff0668
Sun Apr 19 06:34:50 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 30/60
cdd6231
